--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,11 @@ phases:
   build:
     commands:
       - echo Testing...
-      # npm run test
+      - npm run test
       - echo Building...
       - npm run build
+artifacts:
+  files:
+    - "**/*"
+  discard-paths: no
+  base-directory: build
