--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
   build:
     commands:
       - echo Testing...
-      - npm run test
+      # npm run test
       - echo Building...
       - npm run build
 artifacts:
